System Software & Compiler Design Lab/prac7/c/prog3.output
Grammar

    0 $accept: statement $end

    1 statement: E
    2          | statement E

    3 E: E '+' T
    4  | T

    5 T: T '*' F
    6  | F

    7 F: P '^' F
    8  | P

    9 P: '(' E ')'
   10  | NUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9
')' (41) 9
'*' (42) 5
'+' (43) 3
'^' (94) 7
error (256)
NUMBER (258) 10


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
statement (10)
    on left: 1 2, on right: 0 2
E (11)
    on left: 3 4, on right: 1 2 3 9
T (12)
    on left: 5 6, on right: 3 4 5
F (13)
    on left: 7 8, on right: 5 6 7
P (14)
    on left: 9 10, on right: 7 8


state 0

    0 $accept: . statement $end

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    statement  go to state 3
    E          go to state 4
    T          go to state 5
    F          go to state 6
    P          go to state 7


state 1

   10 P: NUMBER .

    $default  reduce using rule 10 (P)


state 2

    9 P: '(' . E ')'

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    E  go to state 8
    T  go to state 5
    F  go to state 6
    P  go to state 7


state 3

    0 $accept: statement . $end
    2 statement: statement . E

    $end    shift, and go to state 9
    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    E  go to state 10
    T  go to state 5
    F  go to state 6
    P  go to state 7


state 4

    1 statement: E .
    3 E: E . '+' T

    '+'  shift, and go to state 11

    $default  reduce using rule 1 (statement)


state 5

    4 E: T .
    5 T: T . '*' F

    '*'  shift, and go to state 12

    $default  reduce using rule 4 (E)


state 6

    6 T: F .

    $default  reduce using rule 6 (T)


state 7

    7 F: P . '^' F
    8  | P .

    '^'  shift, and go to state 13

    $default  reduce using rule 8 (F)


state 8

    3 E: E . '+' T
    9 P: '(' E . ')'

    '+'  shift, and go to state 11
    ')'  shift, and go to state 14


state 9

    0 $accept: statement $end .

    $default  accept


state 10

    2 statement: statement E .
    3 E: E . '+' T

    '+'  shift, and go to state 11

    $default  reduce using rule 2 (statement)


state 11

    3 E: E '+' . T

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    T  go to state 15
    F  go to state 6
    P  go to state 7


state 12

    5 T: T '*' . F

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    F  go to state 16
    P  go to state 7


state 13

    7 F: P '^' . F

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    F  go to state 17
    P  go to state 7


state 14

    9 P: '(' E ')' .

    $default  reduce using rule 9 (P)


state 15

    3 E: E '+' T .
    5 T: T . '*' F

    '*'  shift, and go to state 12

    $default  reduce using rule 3 (E)


state 16

    5 T: T '*' F .

    $default  reduce using rule 5 (T)


state 17

    7 F: P '^' F .

    $default  reduce using rule 7 (F)
